tests/invalid/ListGenerator_Invalid_3.whiley
function f(real n) -> int[]:
    return [0; n]
